# psychic-octo-enigma

./: .gitignore  .pre-commit-config.yaml  =7.2  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: azure-deploy.yml  python-package.yml
app/: main.py
scripts/: run_calculator.py
src/psychic_calculator/: __init__.py  calculator.py  cli.py
src/psychic_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_calculator.py  test_cli.py  test_cli_integration.py
